// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page breadcrumb Verify basic render 1`] = `
<PageBreadcrumb>
  <section
    className="pf-c-page__main-breadcrumb"
  >
    test
  </section>
</PageBreadcrumb>
`;

exports[`page breadcrumb Verify bottom shadow 1`] = `
<PageBreadcrumb
  hasShadowBottom={true}
>
  <section
    className="pf-c-page__main-breadcrumb pf-m-shadow-bottom"
  >
    test
  </section>
</PageBreadcrumb>
`;

exports[`page breadcrumb Verify bottom sticky 1`] = `
<PageBreadcrumb
  sticky="bottom"
>
  <section
    className="pf-c-page__main-breadcrumb pf-m-sticky-bottom"
  >
    test
  </section>
</PageBreadcrumb>
`;

exports[`page breadcrumb Verify limited width 1`] = `
<PageBreadcrumb
  isWidthLimited={true}
>
  <section
    className="pf-c-page__main-breadcrumb pf-m-limit-width"
  >
    <div
      className="pf-c-page__main-body"
    >
      test
    </div>
  </section>
</PageBreadcrumb>
`;

exports[`page breadcrumb Verify overflow scroll 1`] = `
<PageBreadcrumb
  hasOverflowScroll={true}
>
  <section
    className="pf-c-page__main-breadcrumb pf-m-overflow-scroll"
  >
    test
  </section>
</PageBreadcrumb>
`;

exports[`page breadcrumb Verify top shadow 1`] = `
<PageBreadcrumb
  hasShadowTop={true}
>
  <section
    className="pf-c-page__main-breadcrumb pf-m-shadow-top"
  >
    test
  </section>
</PageBreadcrumb>
`;

exports[`page breadcrumb Verify top sticky 1`] = `
<PageBreadcrumb
  sticky="top"
>
  <section
    className="pf-c-page__main-breadcrumb pf-m-sticky-top"
  >
    test
  </section>
</PageBreadcrumb>
`;
